force-app/main/default/objects/Competitor_Account__c/Competitor_Account__c.object-meta.xml
<CustomObject>
    <description>Competitor Account</description>
    <label>Competitor Account</label>
    <nameField>
        <label>Competitor Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>