force-app/main/default/objects/Competitor_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Accounts</relationshipLabel>
    <relationshipName>Competitor_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>