force-app/main/default/objects/Competitor_Account__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <description>No of Employees</description>
    <label>Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>