force-app/main/default/objects/Competitor_Account__c/fields/Oil_Type__c.field-meta.xml
<CustomField>
    <fullName>Oil_Type__c</fullName>
    <label>Oil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>