force-app/main/default/objects/Competitor_Account__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>